# akab

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE_DIAGRAM.md  ASR_UPDATE_SUMMARY.md  ASR_v2_CHANGES.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  Dockerfile  Dockerfile.production  EXAMPLE.md  MIGRATION.md  README.md  USER-JOURNEYS.md  _test_container.py  _test_fixes.py  akab-asr.md  build-docker.bat  build-docker.sh  build.bat  claude_config.json  claude_desktop_config_snippet.json  docker-compose.prod.yml  docker-compose.yml  methodology.md  pyproject.toml  requirements.txt  scientific-prompt.md  setup.bat  setup.py  setup.sh  start-akab.bat  test_substrate.py  verify_setup.py
data/akab/: campaign_template.md  meta_prompt.md
data/akab/campaigns/: sample-campaign.json.template
data/akab/knowledge_bases/: business_strategy.md  innovation_framework.md
data/akab/templates/: creative_storytelling.md  hybrid_work_innovation.md
deploy/: captain-definition
examples/: campaign_example.py  quick_compare.py
src/: __init__.py  __main__.py  campaigns.py  comparison.py  constraints.py  providers.py  server.py  storage.py  substrate_stub.py
src/akab/: __init__.py  __main__.py  archive_manager.py  blinded_hermes.py  campaigns.py  clear_hermes.py  evaluation.py  filesystem.py  judge.py  laboratory.py  multi_turn.py  server.py  server_fastmcp.py  server_multi_turn_integration.md  unlock_campaign_with_krill_archive.py  unlock_implementation.py  unlock_update.py
src/akab/core/: __init__.py
src/akab/core/hermes/: __init__.py  blinded.py
src/akab/core/laboratory/: __init__.py  executor.py  multi_turn.py
src/akab/core/vault/: __init__.py  archive.py  campaigns.py
src/akab/features/: __init__.py
src/akab/features/campaigns/: __init__.py  prompts.yaml
src/akab/features/campaigns/create/: __init__.py  handler.py  tool.py
src/akab/features/campaigns/execute/: __init__.py  handler.py  tool.py
src/akab/features/experiments/: __init__.py
src/akab/features/experiments/create/: __init__.py  handler.py  tool.py
src/akab/features/experiments/diagnose/: __init__.py  handler.py  tool.py
src/akab/features/experiments/list_scrambled/: __init__.py  handler.py  tool.py
src/akab/features/experiments/reveal/: __init__.py  handler.py  tool.py
src/akab/features/quick_compare/: __init__.py  handler.py  prompts.yaml  tool.py
src/akab/features/reporting/: __init__.py
src/akab/features/reporting/list/: __init__.py  handler.py  tool.py
src/akab/providers/: __init__.py
src/akab/tools/: __init__.py  akab_tools.py
src/mcp/: __init__.py
src/tests/: __init__.py  test_filesystem.py
tests/: __init__.py  test_server.py
